[package]
name = "server"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.77"
hyper_wasi = { version = "0.15", features = ["full"]}
tokio_wasi = { version = "1", features = ["rt", "macros", "net", "time", "io-util"]}
